[package]
name = "mini-mtn-momo"
version = "0.1.0"
authors = ["Noah Anabiik Schwarz <noah.anabiik.schwarz@gmail.com>"]
edition = "2018"

[lib]
name = "mini_mtn_momo"
path = "src/lib.rs"

[[bin]]
name = "create_sandbox_user"
path = "src/bin.rs"

[dependencies]
anyhow = "1.0.31"
http = "0.2.1"
serde = { version = "1.0.110", features = ["derive"] }
serde_json = "1.0.53"
reqwest = { version = "0.10.4", features = ["blocking", "json"] }
uuid = { version = "0.8.1", features = ["v4"] }
structopt = "0.3.14"

# [build]
# target = "raspi+amazonlinux2"