[package]
name = "mini-mtn-momo"
version = "0.1.0"
authors = ["Noah Anabiik Schwarz <noah.anabiik.schwarz@gmail.com>"]
edition = "2018"

[lib]
name = "mini_mtn_momo"
path = "src/lib.rs"

[[bin]]
name = "create_sandbox_user"
path = "src/bin.rs"
test = false

[dependencies]
anyhow = "1.0.31"
http = "0.2.1"
lazy_static = "1.4.0"
regex = "1.3.9"
reqwest = { version = "0.10.4", features = ["blocking", "json"] }
serde = { version = "1.0.110", features = ["derive"] }
serde_json = "1.0.53"
uuid = { version = "0.8.1", features = ["v4"] }
structopt = "0.3.14"
# dev
proptest = "0.10.0"

# [build]
# target = "raspi+amazonlinux2"