# TODO: replace pkg common with a nice dotenv config !
[package]
name = "common"
version = "0.0.0"
authors = ["Noah Anabiik Schwarz <noah.anabiik.schwarz@gmail.com>"]
edition = "2018"

[lib]
path = "src/lib.rs"

[dependencies]
anyhow = "1.0.31"
lazy_static = "1.4.0"
regex = "1.3.9"
serde = { version = "1.0.110", features = ["derive"] }
url = "2.1.1"

[dev-dependencies]
proptest = "0.10.0"