[package]
name = "mini"
version = "0.0.0"
authors = ["Noah Anabiik Schwarz <noah.anabiik.schwarz@gmail.com>"]
edition = "2018"

[lib]
path = "src/lib.rs"

[dependencies]
anyhow = "1.0.31"
http = "0.2.1"
lazy_static = "1.4.0"
log = "0.4.8"
reqwest = { version = "0.10.4", features = ["blocking", "json"] }
serde = { version = "1.0.110", features = ["derive"] }
serde_json = "1.0.53"
uuid = { version = "0.8.1", features = ["v4"] }
url = "2.1.1"
# custom modules
common = { version = "0.0.0", path = "./../common" }